dsl/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.9
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, SINGLE_DIGIT=5, MULTI_DIGIT=6, ZERO=7, 
		RULE=8, SUIT_VAL=9, CARD_VAL=10, CARD_DIR=11, OP_UNION=12, OP_INTERSECT=13, 
		OP_COMPLEMENT=14, PLUS=15, MINUS=16, LT=17, GT=18, LTE=19, GTE=20, EQ=21, 
		LP=22, RP=23, SETL=24, SETR=25, IL=26, IR=27, CARDS=28, CARD=29, SUIT=30, 
		VALUE=31, FIRST=32, LAST=33, ANY=34, ALL=35, MAX_WINS=36, MIN_WINS=37, 
		WINS_RULE=38, WINS=39, DUP=40, ORDER=41, CDE=42, CDWI=43, CDI=44, PD=45, 
		CD=46, TRICK=47, WIN_TRICK=48, DONT_WIN_TRICK=49, WIN_CARDS=50, DONT_WIN_CARDS=51, 
		NO_COM=52, LIM_COM=53, COM=54, DRAW_LEFT=55, DRAW_RIGHT=56, PLAYER_ID=57, 
		PLAYERS=58, PLAYER=59, LEFT=60, RIGHT=61, TASKS=62, TOKENS=63, TOKEN=64, 
		O_T=65, DISTRESS_SIGNAL=66, CONSTRAINTS=67, ON=68, OFF=69, DISTRIBUTION=70, 
		CDinput=71, NORMAL=72, MISSION=73, VAR=74, WHITE_SPACE=75, COMMENT=76;
	public static final int
		RULE_prog = 0, RULE_single_interval = 1, RULE_multi_interval = 2, RULE_single_set = 3, 
		RULE_multi_set = 4, RULE_trick_set = 5, RULE_suit_set = 6, RULE_card_set = 7, 
		RULE_player_set = 8, RULE_token_set = 9, RULE_any = 10, RULE_tasks = 11, 
		RULE_d_t = 12, RULE_distribution = 13, RULE_players = 14, RULE_constratints_distribution = 15, 
		RULE_equation = 16, RULE_suit_expr = 17, RULE_value_expr = 18, RULE_card_spec = 19, 
		RULE_card_expr = 20, RULE_trick_expr = 21, RULE_player_expr = 22, RULE_token_expr = 23, 
		RULE_rules = 24, RULE_nSwap = 25, RULE_nSwitch = 26, RULE_tokens = 27, 
		RULE_mission = 28, RULE_var_dec = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "single_interval", "multi_interval", "single_set", "multi_set", 
			"trick_set", "suit_set", "card_set", "player_set", "token_set", "any", 
			"tasks", "d_t", "distribution", "players", "constratints_distribution", 
			"equation", "suit_expr", "value_expr", "card_spec", "card_expr", "trick_expr", 
			"player_expr", "token_expr", "rules", "nSwap", "nSwitch", "tokens", "mission", 
			"var_dec"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'nSwap'", "'nSwitch'", null, null, "'0'", "'Rule'", 
			null, null, null, "'|'", "'&'", "'!'", "'+'", "'-'", "'<'", "'>'", "'<='", 
			"'>='", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", null, null, 
			null, null, null, null, null, "'all'", "'maxWins'", "'minWins'", "'WR'", 
			"'wins'", "'dup'", "'order'", "'cde'", "'cdwi'", "'cdi'", "'pd'", "'cd'", 
			null, "'WT'", "'DWT'", "'WC'", "'DWC'", "'NC'", "'LC'", "'c'", "'DCL'", 
			"'DCR'", null, null, null, null, null, null, null, null, null, null, 
			"'ruleDist'", "'on'", "'off'", "'taskDist'", "'cdInput'", "'n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "SINGLE_DIGIT", "MULTI_DIGIT", "ZERO", 
			"RULE", "SUIT_VAL", "CARD_VAL", "CARD_DIR", "OP_UNION", "OP_INTERSECT", 
			"OP_COMPLEMENT", "PLUS", "MINUS", "LT", "GT", "LTE", "GTE", "EQ", "LP", 
			"RP", "SETL", "SETR", "IL", "IR", "CARDS", "CARD", "SUIT", "VALUE", "FIRST", 
			"LAST", "ANY", "ALL", "MAX_WINS", "MIN_WINS", "WINS_RULE", "WINS", "DUP", 
			"ORDER", "CDE", "CDWI", "CDI", "PD", "CD", "TRICK", "WIN_TRICK", "DONT_WIN_TRICK", 
			"WIN_CARDS", "DONT_WIN_CARDS", "NO_COM", "LIM_COM", "COM", "DRAW_LEFT", 
			"DRAW_RIGHT", "PLAYER_ID", "PLAYERS", "PLAYER", "LEFT", "RIGHT", "TASKS", 
			"TOKENS", "TOKEN", "O_T", "DISTRESS_SIGNAL", "CONSTRAINTS", "ON", "OFF", 
			"DISTRIBUTION", "CDinput", "NORMAL", "MISSION", "VAR", "WHITE_SPACE", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<MissionContext> mission() {
			return getRuleContexts(MissionContext.class);
		}
		public MissionContext mission(int i) {
			return getRuleContext(MissionContext.class,i);
		}
		public List<EquationContext> equation() {
			return getRuleContexts(EquationContext.class);
		}
		public EquationContext equation(int i) {
			return getRuleContext(EquationContext.class,i);
		}
		public List<Suit_exprContext> suit_expr() {
			return getRuleContexts(Suit_exprContext.class);
		}
		public Suit_exprContext suit_expr(int i) {
			return getRuleContext(Suit_exprContext.class,i);
		}
		public List<Value_exprContext> value_expr() {
			return getRuleContexts(Value_exprContext.class);
		}
		public Value_exprContext value_expr(int i) {
			return getRuleContext(Value_exprContext.class,i);
		}
		public List<Card_specContext> card_spec() {
			return getRuleContexts(Card_specContext.class);
		}
		public Card_specContext card_spec(int i) {
			return getRuleContext(Card_specContext.class,i);
		}
		public List<Card_exprContext> card_expr() {
			return getRuleContexts(Card_exprContext.class);
		}
		public Card_exprContext card_expr(int i) {
			return getRuleContext(Card_exprContext.class,i);
		}
		public List<Trick_exprContext> trick_expr() {
			return getRuleContexts(Trick_exprContext.class);
		}
		public Trick_exprContext trick_expr(int i) {
			return getRuleContext(Trick_exprContext.class,i);
		}
		public List<Player_exprContext> player_expr() {
			return getRuleContexts(Player_exprContext.class);
		}
		public Player_exprContext player_expr(int i) {
			return getRuleContext(Player_exprContext.class,i);
		}
		public List<Token_exprContext> token_expr() {
			return getRuleContexts(Token_exprContext.class);
		}
		public Token_exprContext token_expr(int i) {
			return getRuleContext(Token_exprContext.class,i);
		}
		public List<Var_decContext> var_dec() {
			return getRuleContexts(Var_decContext.class);
		}
		public Var_decContext var_dec(int i) {
			return getRuleContext(Var_decContext.class,i);
		}
		public List<RulesContext> rules() {
			return getRuleContexts(RulesContext.class);
		}
		public RulesContext rules(int i) {
			return getRuleContext(RulesContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(78);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(60);
					mission();
					}
					break;
				case 2:
					{
					setState(61);
					equation(0);
					}
					break;
				case 3:
					{
					setState(62);
					suit_expr(0);
					}
					break;
				case 4:
					{
					setState(63);
					value_expr(0);
					}
					break;
				case 5:
					{
					setState(64);
					card_spec();
					}
					break;
				case 6:
					{
					setState(65);
					card_expr(0);
					}
					break;
				case 7:
					{
					setState(66);
					trick_expr(0);
					}
					break;
				case 8:
					{
					setState(67);
					player_expr(0);
					}
					break;
				case 9:
					{
					setState(68);
					token_expr(0);
					}
					break;
				case 10:
					{
					setState(69);
					var_dec();
					}
					break;
				case 11:
					{
					setState(70);
					suit_expr(0);
					}
					break;
				case 12:
					{
					setState(71);
					value_expr(0);
					}
					break;
				case 13:
					{
					setState(72);
					card_spec();
					}
					break;
				case 14:
					{
					setState(73);
					card_expr(0);
					}
					break;
				case 15:
					{
					setState(74);
					trick_expr(0);
					}
					break;
				case 16:
					{
					setState(75);
					player_expr(0);
					}
					break;
				case 17:
					{
					setState(76);
					token_expr(0);
					}
					break;
				case 18:
					{
					setState(77);
					rules();
					}
					break;
				}
				}
				setState(80); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SINGLE_DIGIT) | (1L << MULTI_DIGIT) | (1L << OP_COMPLEMENT) | (1L << LP) | (1L << SETL) | (1L << IL) | (1L << CARDS) | (1L << MAX_WINS) | (1L << MIN_WINS) | (1L << WINS_RULE) | (1L << WIN_TRICK) | (1L << DONT_WIN_TRICK) | (1L << WIN_CARDS) | (1L << DONT_WIN_CARDS) | (1L << NO_COM) | (1L << LIM_COM) | (1L << DRAW_LEFT) | (1L << DRAW_RIGHT))) != 0) || _la==MISSION || _la==VAR );
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_intervalContext extends ParserRuleContext {
		public TerminalNode IL() { return getToken(GrammarParser.IL, 0); }
		public List<TerminalNode> SINGLE_DIGIT() { return getTokens(GrammarParser.SINGLE_DIGIT); }
		public TerminalNode SINGLE_DIGIT(int i) {
			return getToken(GrammarParser.SINGLE_DIGIT, i);
		}
		public TerminalNode IR() { return getToken(GrammarParser.IR, 0); }
		public Single_intervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSingle_interval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSingle_interval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSingle_interval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_intervalContext single_interval() throws RecognitionException {
		Single_intervalContext _localctx = new Single_intervalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_single_interval);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(IL);
			setState(85);
			match(SINGLE_DIGIT);
			setState(86);
			match(T__0);
			setState(87);
			match(SINGLE_DIGIT);
			setState(88);
			match(IR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multi_intervalContext extends ParserRuleContext {
		public TerminalNode IL() { return getToken(GrammarParser.IL, 0); }
		public TerminalNode IR() { return getToken(GrammarParser.IR, 0); }
		public List<TerminalNode> SINGLE_DIGIT() { return getTokens(GrammarParser.SINGLE_DIGIT); }
		public TerminalNode SINGLE_DIGIT(int i) {
			return getToken(GrammarParser.SINGLE_DIGIT, i);
		}
		public List<TerminalNode> MULTI_DIGIT() { return getTokens(GrammarParser.MULTI_DIGIT); }
		public TerminalNode MULTI_DIGIT(int i) {
			return getToken(GrammarParser.MULTI_DIGIT, i);
		}
		public Multi_intervalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_interval; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterMulti_interval(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitMulti_interval(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitMulti_interval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multi_intervalContext multi_interval() throws RecognitionException {
		Multi_intervalContext _localctx = new Multi_intervalContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_multi_interval);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(IL);
			setState(91);
			_la = _input.LA(1);
			if ( !(_la==SINGLE_DIGIT || _la==MULTI_DIGIT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(92);
			match(T__0);
			setState(93);
			_la = _input.LA(1);
			if ( !(_la==SINGLE_DIGIT || _la==MULTI_DIGIT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(94);
			match(IR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_setContext extends ParserRuleContext {
		public TerminalNode SETL() { return getToken(GrammarParser.SETL, 0); }
		public TerminalNode SETR() { return getToken(GrammarParser.SETR, 0); }
		public List<TerminalNode> SINGLE_DIGIT() { return getTokens(GrammarParser.SINGLE_DIGIT); }
		public TerminalNode SINGLE_DIGIT(int i) {
			return getToken(GrammarParser.SINGLE_DIGIT, i);
		}
		public Single_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterSingle_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitSingle_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitSingle_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_setContext single_set() throws RecognitionException {
		Single_setContext _localctx = new Single_setContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_single_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(SETL);
			setState(98); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(97);
				match(SINGLE_DIGIT);
				}
				}
				setState(100); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SINGLE_DIGIT );
			setState(102);
			match(SETR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Multi_setContext extends ParserRuleContext {
		public TerminalNode SETL() { return getToken(GrammarParser.SETL, 0); }
		public TerminalNode SETR() { return getToken(GrammarParser.SETR, 0); }
		public List<TerminalNode> SINGLE_DIGIT() { return getTokens(GrammarParser.SINGLE_DIGIT); }
		public TerminalNode SINGLE_DIGIT(int i) {
			return getToken(GrammarParser.SINGLE_DIGIT, i);
		}
		public List<TerminalNode> MULTI_DIGIT() { return getTokens(GrammarParser.MULTI_DIGIT); }
		public TerminalNode MULTI_DIGIT(int i) {
			return getToken(GrammarParser.MULTI_DIGIT, i);
		}
		public Multi_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multi_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterMulti_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitMulti_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitMulti_set(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Multi_setContext multi_set() throws RecognitionException {
		Multi_setContext _localctx = new Multi_setContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_multi_set);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(SETL);
			setState(106); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(105);
				_la = _input.LA(1);
				if ( !(_la==SINGLE_DIGIT || _la==MULTI_DIGIT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(108); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SINGLE_DIGIT || _la==MULTI_DIGIT );
			setState(110);
			match(SETR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trick_setContext extends ParserRuleContext {
		public TerminalNode SETL() { return getToken(GrammarParser.SETL, 0); }
		public TerminalNode SETR() { return getToken(GrammarParser.SETR, 0); }
		public List<TerminalNode> SINGLE_DIGIT() { return getTokens(GrammarParser.SINGLE_DIGIT); }
		public TerminalNode SINGLE_DIGIT(int i) {
			return getToken(GrammarParser.SINGLE_DIGIT, i);
		}
		public List<TerminalNode> MULTI_DIGIT() { return getTokens(GrammarParser.MULTI_DIGIT); }
		public TerminalNode MULTI_DIGIT(int i) {
			return getToken(GrammarParser.MULTI_DIGIT, i);
		}
		public List<TerminalNode> FIRST() { return getTokens(GrammarParser.FIRST); }
		public TerminalNode FIRST(int i) {
			return getToken(GrammarParser.FIRST, i);
		}
		public List<TerminalNode> LAST() { return getTokens(GrammarParser.LAST); }
		public TerminalNode LAST(int i) {
			return getToken(GrammarParser.LAST, i);
		}
		public Trick_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trick_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterTrick_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitTrick_set(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarVisitor ) return ((GrammarVisitor<? extends T>)visitor).visitTrick_set(this);
			else return visitor.visitChildren(this);
		}
	}
